# sailpoint-isc-auditor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
auditor/: __init__.py  cli.py  client.py  config.py  engine.py  models.py  scoring.py  suppressions.py
auditor/ai/: __init__.py  analyzer.py
auditor/collectors/: __init__.py
auditor/modules/: __init__.py  ar.py  cr.py  gq.py  ih.py  li.py  mi.py
auditor/reporters/: __init__.py  html_reporter.py  json_reporter.py
docs/: CODEBASE.md
policy_packs/: default.yaml
tests/: conftest.py  test_config.py  test_engine.py  test_scoring.py  test_suppressions.py
