[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sailpoint-isc-auditor"
version = "0.1.0"
description = "AI-powered audit engine for SailPoint Identity Security Cloud"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["sailpoint", "identity", "security", "iga", "audit", "isc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
isc-audit = "auditor.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/sailpoint-isc-auditor"
Issues = "https://github.com/yourusername/sailpoint-isc-auditor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["auditor*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
